<resources>
    <string name="app_name">Villon</string>
    <string name="name">Name</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_contacts" translatable="false">ContactsActivity</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="title_activity_phone_settings" translatable="false">PhoneSettingsActivity</string>
    <string name="title_activity_username_settings" translatable="false">UsernameSettingsActivity</string>
    <string name="intent_key_address_id" translatable="false">addressId</string>
    <string name="picture_attached">Picture attached</string>
    <string name="choose_image">Choose image</string>
    <string name="toolbar_title_main" translatable="false">Villon</string>
    <string name="text_username_is_available">Username is available</string>
    <string name="text_low_username">Username must have at least 5 characters</string>
    <string name="text_username_taken">Username already taken</string>
    <string name="phone_number_example" translatable="false">+7 (985) 513-66-21</string>
    <string name="text_phone_number">Phone number</string>
    <string name="tv_name">Name</string>
    <string name="text_none">None</string>
    <string name="text_username">Username</string>
    <string name="username" translatable="false">Username</string>
    <string name="invalid_username">Sorry, this username is invalid.</string>
    <string name="nickname_key">nickname</string>
    <string name="phone_verification_text">Phone verification</string>
    <string name="your_phone_number_text">Your phone number</string>
    <string name="secret_code_text">Secret Code</string>
</resources>
