<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/name_settings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvName"
                            style="@style/SettingsValueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_name" />

                        <TextView
                            style="@style/SettingsTitleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_name" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/phone_settings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvPhone"
                            style="@style/SettingsValueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number_example" />

                        <TextView
                            style="@style/SettingsTitleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_phone_number" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/username_settings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvUsername"
                            style="@style/SettingsValueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_none" />

                        <TextView
                            style="@style/SettingsTitleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_username" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/bio_settings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvBio"
                            style="@style/SettingsValueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="None" />

                        <TextView
                            style="@style/SettingsTitleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Bio" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>